--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 								<link>https://aoindustries.com/ao-servlet-util/apidocs/</link>
 								<link>https://aoindustries.com/ao-style/apidocs/</link>
 								<link>https://aoindustries.com/ao-taglib/apidocs/</link>
+								<link>https://aoindustries.com/ao-web-resources/taglib/apidocs/</link>
 								<!-- No apidocs: <groupId>org.webjars</groupId><artifactId>jquery</artifactId> -->
 								<link>https://semanticcms.com/core/model/apidocs/</link>
 								<link>https://semanticcms.com/core/renderer/html/apidocs/</link>
@@ -137,6 +138,9 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 			</dependency>
 			<dependency>
 				<groupId>com.aoindustries</groupId><artifactId>ao-taglib</artifactId><version>5.0.0-SNAPSHOT<!-- ${POST-SNAPSHOT} --></version>
+			</dependency>
+			<dependency>
+				<groupId>com.aoindustries</groupId><artifactId>ao-web-resources-taglib</artifactId><version>0.1.0-SNAPSHOT<!-- ${POST-SNAPSHOT} --></version>
 			</dependency>
 			<dependency>
 				<groupId>org.webjars</groupId><artifactId>html5shiv</artifactId><version>3.7.3-1</version>
@@ -215,6 +219,9 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		</dependency>
 		<dependency>
 			<groupId>com.aoindustries</groupId><artifactId>ao-taglib</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.aoindustries</groupId><artifactId>ao-web-resources-taglib</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.webjars</groupId><artifactId>html5shiv</artifactId>
