--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 								<link>https://semanticcms.com/file/taglib/apidocs/</link>
 								<link>https://semanticcms.com/openfile/servlet/apidocs/</link>
 								<link>https://semanticcms.com/pagegraph/apidocs/</link>
+								<link>https://semanticcms.com/theme-documentation/style/apidocs/</link>
 							</links>
 						</configuration>
 					</plugin>
@@ -153,6 +154,9 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 			</dependency>
 			<dependency>
 				<groupId>com.semanticcms</groupId><artifactId>semanticcms-pagegraph</artifactId><version>1.5.0-SNAPSHOT<!-- ${POST-SNAPSHOT} --></version>
+			</dependency>
+			<dependency>
+				<groupId>com.semanticcms</groupId><artifactId>semanticcms-theme-documentation-style</artifactId><version>1.8.0-SNAPSHOT<!-- ${POST-SNAPSHOT} --></version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
@@ -223,6 +227,9 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		</dependency>
 		<dependency>
 			<groupId>com.semanticcms</groupId><artifactId>semanticcms-pagegraph</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.semanticcms</groupId><artifactId>semanticcms-theme-documentation-style</artifactId>
 		</dependency>
 	</dependencies>
 </project>
